--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- PROFILE -->
   <section id="profile" class="py-5" style="background-color: #f5f5f5;">
     <div class="container">
-      <div class="text-center mb-4" data-aos="fade-bottom"   data-aos-delay="50">
+      <div class="text-center mb-4" data-aos="fade-up" data-aos-delay="50">
         <h2 class="fw-bold">My <span class="text-danger">Profile</span></h2>
         <p class="text-muted">A little bit about me</p>
       </div>
